dashboard administrativo + validacao

--- a/frontend/validar.html
+++ b/frontend/validar.html
@@ -12,6 +12,7 @@
         <p>Pressione o botão e aponte a câmera para o QR Code do cliente.</p>
 
         <button id="start-scan-btn">Abrir Câmera</button>
+        <button id="back-to-admin-btn" class="back-button">Voltar para Administração</button>
         
         <div id="video-container" class="hidden" style="width: 100%; max-width: 500px; margin: 1rem auto;">
             <video id="qr-video" style="width: 100%;"></video>
