menu de adm funcional

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,10 @@
         <img src="assets/logo.jpeg" alt="Logo Vila da Pizza" class="logo">
         <h1 id="promo-title">Carregando Promoção...</h1>
         <p>Cadastre-se para garantir sua pizza pequena por um preço incrível!</p>
+
+        <div id="closed-promo-container" class="hidden">
+            <h2>As inscrições para esta promoção estão encerradas.</h2>
+        </div>
         
         <form id="cadastro-form">
             <label for="nome">Nome Completo:</label>
@@ -62,6 +66,6 @@
         <div id="error-msg" class="hidden"></div>
     </div>
     
-    <script type="module" src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
