ajuste de margem das telas

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,8 +6,7 @@
     <title>Administração da Promoção</title>
     <link rel="stylesheet" href="styles.css?v=1.5">
 </head>
-<body>
-<body>
+<body class="admin-page">
     <button class="hamburger-btn">&#9776;</button>
     <div class="admin-layout">
         <aside class="sidebar">
