--- a/frontend/admin-clientes.html
+++ b/frontend/admin-clientes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css?v=1.5">
 </head>
 <body>
-<body>
+<body class="admin-page">
     <button class="hamburger-btn">&#9776;</button>
     <div class="admin-layout">
         <aside class="sidebar">
