--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -88,7 +88,7 @@
             const passwordInput = document.getElementById('password');
             const loginErrorMsg = document.getElementById('login-error-msg');
 
-            const API_BASE_URL = 'https://4f4816236afa.ngrok-free.app' // Será preenchida com a URL do ngrok ou domínio
+            const API_BASE_URL = 'http://212.85.21.16:8123'; // URL da API em produção
 
             loginForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
