ajuste das rotas

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -12,9 +12,9 @@
         <aside class="sidebar">
             <h2><span class="sidebar-text">Admin</span></h2>
             <ul>
-                <li><a href="/admin" class="active"><span class="sidebar-text">Configurações</span></a></li>
-                <li><a href="/admin-clientes"><span class="sidebar-text">Clientes</span></a></li>
-                <li><a href="/validar"><span class="sidebar-text">Validar QR Code</span></a></li>
+                <li><a href="admin.html" class="active"><span class="sidebar-text">Configurações</span></a></li>
+                <li><a href="admin-clientes.html"><span class="sidebar-text">Clientes</span></a></li>
+                <li><a href="validar.html"><span class="sidebar-text">Validar QR Code</span></a></li>
                 <li><a href="#" id="logout-btn"><span class="sidebar-text">Sair</span></a></li>
             </ul>
         </aside>
