ajuste de cache html

--- a/frontend/admin-clientes.html
+++ b/frontend/admin-clientes.html
@@ -55,8 +55,8 @@
         </main>
     </div>
 
-    <script src="navigation.js"></script>
-    <script src="admin-clientes.js"></script>
+    <script src="navigation.js?v=1.1"></script>
+    <script src="admin-clientes.js?v=1.1"></script>
 
     <!-- Modal para detalhes do cliente -->
     <div id="client-modal" class="modal">
