--- a/frontend/validar.html
+++ b/frontend/validar.html
@@ -27,6 +27,6 @@
     
     <!-- Biblioteca para leitura de QR Code -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-    <script src="validar.js"></script>
+    <script src="validar.js?v=1.1"></script>
 </body>
 </html>
