--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -45,7 +45,7 @@
         </main>
     </div>
 
-    <script src="navigation.js"></script>
-    <script src="admin.js"></script>
+    <script src="navigation.js?v=1.1"></script>
+    <script src="admin.js?v=1.1"></script>
 </body>
 </html>
