--- a/frontend/promocao.html
+++ b/frontend/promocao.html
@@ -66,6 +66,6 @@
         <div id="error-msg" class="hidden"></div>
     </div>
     
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.js?v=1.1"></script>
 </body>
 </html>
