estilo botao de deletar

--- a/frontend/admin-clientes.html
+++ b/frontend/admin-clientes.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="admin-buttons" style="margin-top: 2rem;">
                     <button id="reset-clientes-btn" class="btn-danger">Resetar Clientes Utilizados</button>
-                    <button id="delete-all-clientes-btn" class="btn-danger" style="margin-left: 1rem;">Deletar Todos os Clientes</button>
+                    <button id="delete-all-clientes-btn" class="btn-danger">Deletar Todos os Clientes</button>
                 </div>
             </div>
         </main>
